Retrieve valid parameter values for SLR from backend
